# xrtransport

./: .gitignore  .gitmodules  CLAUDE.md  CLIENT_IMPLEMENTATION_PLAN.md  CMakeLists.txt  CMakePresets.json  README.md  SERVER_IMPLEMENTATION_PLAN.md  WAYDROID.md  create_openxr_manifest.cmake  example_client_config.json  function_ids.json  install_waydroid_runtime.py  protocol.txt  regenerate.bat  regenerate.sh  server_notes.txt  xrtransport.code-workspace
code_generation/: __init__.py  __main__.py  bindings.py  function_ids.py  meta_dump.py  spec_parser.py  struct_fuzzer.py
code_generation/functions/: __init__.py  entry_points.py  runtime.py
code_generation/reflection/: __init__.py  struct.py
code_generation/structs/: __init__.py  deserializer.py  serializer.py
code_generation/templates/: utils.mako
code_generation/templates/client/: dispatch_header.mako  dispatch_impl.mako  entry.mako  exports_header.mako  exports_impl.mako  function_table_impl.mako  rpc_header.mako  rpc_impl.mako  runtime_header.mako  runtime_impl.mako
code_generation/templates/extensions/: enabled_extensions.mako  extension_functions.mako
code_generation/templates/functions/: entry_points.mako  runtime_header.mako  runtime_impl.mako
code_generation/templates/reflection/: struct.mako
code_generation/templates/server/: function_dispatch_header.mako  function_dispatch_impl.mako  function_handlers_header.mako  function_handlers_impl.mako  function_loader.mako  function_loader_header.mako  function_loader_impl.mako
code_generation/templates/structs/: deserializer.mako  deserializer_header.mako  deserializer_impl.mako  deserializer_in_place_header.mako  deserializer_in_place_impl.mako  serializer.mako  serializer_header.mako  serializer_impl.mako  struct_size.mako
code_generation/templates/test/: serialization_tests.mako  struct_fuzzer.mako  struct_fuzzer_in_place.mako  unit_tests.mako
code_generation/test/: __init__.py  struct_fuzzer.py
include/xrtransport/: api.h  asio_compat.h  deserializer.h  fatal_error.h  function_loader.h  handle_exchange.h  serializer.h  time.h  transport.h  util.h
include/xrtransport/client/: api_layer_support.h  module_interface.h  module_types.h
include/xrtransport/config/: config.h
include/xrtransport/custom/: deserializer.h  serializer.h
include/xrtransport/extensions/: enabled_extensions.h  extension_functions.h
include/xrtransport/reflection/: reflection_struct.h
include/xrtransport/serialization/: deserializer.h  error.h  serializer.h  struct_size.h
include/xrtransport/server/: function_loader.h  module_interface.h
include/xrtransport/transport/: error.h  transport.h  transport_c_api.h
src/: CMakeLists.txt
src/addons/: CMakeLists.txt
src/client/: CMakeLists.txt  available_extensions.cpp  available_extensions.h  build.gradle  dispatch.cpp  dispatch.h  entry.cpp  entry_points.cpp  exports.cpp  exports.h  function_table.cpp  function_table.h  module_loader.cpp  module_loader.h  rpc.cpp  rpc.h  runtime.cpp  runtime.h  settings.gradle  synchronization.cpp  synchronization.h  transport_manager.cpp  transport_manager.h  xrtransport_client_manifest-dev.json.in  xrtransport_client_manifest.json
src/client/android/: build.gradle
src/client/android/src/main/: AndroidManifest.xml
src/client/android/src/main/res/values/: strings.xml
src/client/gradle/wrapper/: gradle-wrapper.properties
src/common/config/: CMakeLists.txt  config.cpp
src/common/serialization/: CMakeLists.txt  custom_deserializer.cpp  custom_serializer.cpp  deserializer.cpp  serializer.cpp  struct_size.cpp
src/common/transport/: CMakeLists.txt  transport.cpp  transport_c_api.cpp  transport_impl.cpp  transport_impl.h
src/modules/: CMakeLists.txt
src/modules/handle_exchange_linux/: CMakeLists.txt  client_handle_exchange_linux.cpp  messages.h  server_handle_exchange_linux.cpp
src/modules/handle_exchange_stub/: CMakeLists.txt  client_handle_exchange_stub.cpp  server_handle_exchange_stub.cpp
src/modules/vulkan/: CMakeLists.txt  synchronization_model.md
src/modules/vulkan/client/: CMakeLists.txt  session_state.cpp  session_state.h  vulkan_client_module.cpp  vulkan_core.cpp  vulkan_core.h  vulkan_loader.h
src/modules/vulkan/common/: CMakeLists.txt  image_handles.h  image_type.h  vulkan_common.h
src/modules/vulkan/server/: CMakeLists.txt  session_state.cpp  session_state.h  vulkan_server_module.cpp
src/modules/vulkan2/: synchronization_model.md
src/modules/vulkan2/client/: CMakeLists.txt  dma_buf_exchange.cpp  dma_buf_exchange.h  session_state.cpp  session_state.h  validate_frame_end.cpp  validate_frame_end.h  vulkan2_client_module.cpp  vulkan_client_module.cpp  vulkan_core.cpp  vulkan_core.h  vulkan_loader.h
src/modules/vulkan2/common/: CMakeLists.txt  image_handles.h  vulkan2_common.h  vulkan_common.h
src/modules/vulkan2/server/: CMakeLists.txt  collect_swapchains.cpp  collect_swapchains.h  dma_buf_exchange.cpp  dma_buf_exchange.h  session_state.cpp  session_state.h  timeline_semaphore_executor.cpp  timeline_semaphore_executor.h  vulkan2_server_module.cpp
src/server/: CMakeLists.txt  function_dispatch.cpp  function_dispatch.h  function_handlers.cpp  function_handlers.h  function_loader.cpp  function_loader.h  main.cpp  module.h  server.cpp  server.h
src/xrtransport/: custom_deserializer.cpp  custom_deserializer_in_place.cpp  custom_serializer.cpp  deserializer.cpp  serializer.cpp  transport.cpp
src/xrtransport/serialization/: CMakeLists.txt  custom_deserializer.cpp  serializer.cpp
src/xrtransport/transport/: CMakeLists.txt  transport.cpp
test/: CMakeLists.txt  fuzzer.cpp  fuzzer_in_place.cpp
test/serialization/: CMakeLists.txt  fuzzer.cpp
test/transport/: CMakeLists.txt  shared_buffer.cpp  shared_buffer.h  test_duplex_stream.cpp  test_duplex_stream.h  transport_integration_tests.cpp  transport_server.cpp  transport_tests.cpp
